fix: add z-index to catalog modal

--- a/src/app/core/components/catalog/catalog.component.scss
+++ b/src/app/core/components/catalog/catalog.component.scss
@@ -2,6 +2,7 @@
   position: absolute;
   top: 100%;
   left: 0px;
+  z-index: 10;
 }
 .catalog {
   &__backdrop {
